@@ -1,3 +1,3 @@
-DIST yaws-1.89.tar.gz 878410 RMD160 9fc274a9ddc82cc83bceeaed133758ee71c2951e SHA1 3f6cc88eb7f154f017f78f1ad07eff5521e7319c SHA256 577c8adde339b700373b83b57b7eca952a41624fcf5f963e43977399de54f170
-EBUILD yaws-1.89.ebuild 1013 RMD160 120c5c0b839c17e16956a4073771238cc1a1c6d4 SHA1 652c98e28772a9a96596e22763ec824cd4f2092b SHA256 963500577e989ea90de78cdc144e74b7d05c8057c3ffc8b04ff1562a2cd837c1
-MISC ChangeLog 236 RMD160 c8839c757193572c35c943b0dc87d2d975194fe0 SHA1 a82f4a0ee6d22d5f010b3bcf68accc27006db720 SHA256 e02dd33a19fde95b904643fce90a4f8815e757c2297010bdc01c62a7573bea24
+DIST yaws-1.94.tar.gz 1146801 SHA256 dbc5fe94642a2a21fc8ddd2a869369481bb442d51934468f46b8b72ef8b41176 SHA512 c7e93e617395dbc269311cc5a559068a825ba2a45fbc57fe964688ad2214cbefef4b0c96de9c011cc60dc0ad7a30b1e86e005fd3f2b548aa72a973afb7a5ab77 WHIRLPOOL 1d85af57ac112c256f20ada689d913210732b57d46ac8eecb504e74c5ed11cd9bbd85db5e716ecf83424a828ccf04cf5e5eea26cf17acd031c21e4b6d55f4954
+EBUILD yaws-1.94.ebuild 1320 SHA256 9b9eef8762505d945175ceab1ece8f53a7357c8a1cc5d64219649c94c0206efc SHA512 70a876648e8a89039014cba8f86467da84bdc838727a4cf26456c1d7acfb3b7efe4944451d89a7747c25cf4381bb14580d5357850a5de9b3af2e8ac61a192fe6 WHIRLPOOL 56762e013650bc74bd5c5fb809a2b0076194c37e2af7380eea2926ac0a30bb3684e432330339bed58359bd48a1995d2f9aa213f7b3e5765f7d175dd22f5fde9e
+MISC ChangeLog 370 SHA256 4c53b468c7773ca2f4532d46ce6ef41d9ed2109ccab58e96c65b3d44e7858ed2 SHA512 ad179f1f15e00ae89734ed5dbd6fb7760ccfb3a99081a69d90cbe79f4767b908bc26dfa95698cb482ed05fb57c8c071793dc819a206fd8ac718602db3cb075eb WHIRLPOOL 9b03377c1e500235579b0401ca70523384cb619388fa159e4123f2f46f6a302adce054dffdfe127b2e2bce2e70acea8a1a8f53f0e773f650fd873831b9ce70a6
