@@ -1,6 +1,12 @@
 # ChangeLog for www-servers/yaws
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*yaws-1.94 (28 Aug 2012)
+
+  28 Aug 2012; Dean Matzkov <bapabooiee@gmail.com> -yaws-1.89.ebuild,
+  +yaws-1.94.ebuild:
+  Version bump.
 
 *yaws-1.89 (17 Jan 2011)
 
